# skeleton-crew

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  CHANGELOG.md  DATABASE_SETUP.md  GUI_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  JACK_COORDINATION_ACROSS_LAN.md  PLAN.md  QUICKSTART.md  README.md  REFOCUS_COMPLETE.md  REMOTE_JACK_PANEL_COMPLETE.md  SSH_INTEGRATION.md  START_HERE.md  TRANSPORT_COORDINATION.md  TRANSPORT_IMPLEMENTATION.md  TRANSPORT_QUICKSTART.md  VOICE_COMMANDS.md  XJADEO_INTEGRATION.md  config.example.yaml  config.yaml  node_code.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_discovery_gui_integration.py  test_drag.py  test_gui_midi_issue.py  test_jack_ports.py  test_midi_ports.py  test_our_node.py  test_remote_jack_integration.py  test_remote_jack_panel.py  test_remote_jack_ssh.py  test_thread_safety.py  test_udp_discovery.py  (+2 more)
deployment/: deploy_voice.sh  skeleton-voice.service
examples/: launch_transport_agent.py  launch_transport_coordinator.py  tool_registry_demo.py  transport_integration_example.py  voice_command_integration.py
models/: README.md
models/vosk/: README.md
src/skeleton_app/: __init__.py  cli.py  cluster_commands.py  config.py  daemon.py  database.py  db_commands.py  registry.py  remote.py  service_discovery.py
src/skeleton_app/audio/: __init__.py  jack_client.py  qt_video_player.py  transport_agent.py  transport_coordinator.py  transport_services.py  vosk_jack_stt.py  xjadeo_manager.py
src/skeleton_app/core/: __init__.py  types.py
src/skeleton_app/gui/: __init__.py  app.py  async_task.py  discovery_bridge.py  (+1 more)
tools/: check_video_compatibility.py  scan_recent_videos.py  setup_voice.sh  test_voice_service.py  voice_client.py
(+23 files in other folders)
